--- a/app/scss/_reset.scss
+++ b/app/scss/_reset.scss
@@ -6,30 +6,9 @@ html {
 *::after,
 *::before {
   box-sizing: inherit;
-}
-
-ul[class],
-ol[class] {
-  padding: 0;
-}
-
-body,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-ul[class],
-ol[class],
-li,
-figure,
-figcaption,
-blockquote,
-dl,
-dd {
   margin: 0;
+  padding: 0;
+  background: transparent;
 }
 
 ul[class] {
@@ -44,11 +23,13 @@ img {
 input,
 button,
 textarea,
-select {
+select,
+a {
   font: inherit;
+  display: block;
+  color: inherit;
 }
 
 a {
   text-decoration: none;
-  color: inherit;
 }
