--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,7 +3,7 @@
 @import 'vars';
 @import 'global';
 
-.hero-bg{
+.hero-bg {
     position: absolute;
     width: 100%;
     height: 100vh;
@@ -15,7 +15,7 @@
     background-image: url('../images/dist/hero-bg.png');
 }
 
-.hero-bg-blot{
+.hero-bg-blot {
     position: absolute;
     width: 50vw;
     height: 50vw;
@@ -27,7 +27,7 @@
     background-image: url('../images/dist/hero-bg-blot.png');
 }
 
-.hero-bg-cross1{
+.hero-bg-cross1 {
     position: absolute;
     left: 0;
     top: 30vh;
@@ -40,7 +40,7 @@
     background-image: url('../images/dist/sprite-stack.svg#hero-cross-1');
 }
 
-.hero-bg-cross2{
+.hero-bg-cross2 {
     position: absolute;
     left: 30vw;
     top: 70vh;
@@ -52,7 +52,7 @@
     background-image: url('../images/dist/sprite-stack.svg#hero-cross-2');
 }
 
-.hero-bg-dots{
+.hero-bg-dots {
     position: absolute;
     right: 2vw;
     top: 40vh;
@@ -96,16 +96,16 @@
     margin-top: 70px;
     display: flex;
     align-items: center;
-    column-gap: 30px;
+    gap: 30px;
 
     &__left {
         width: fit-content;
     }
 
-    &__subtitle{
+    &__subtitle {
         position: relative;
 
-        &::after{
+        &::after {
             content: '';
             position: absolute;
             width: 130px;
@@ -171,6 +171,105 @@
             top: initial;
             right: -120px;
             bottom: -25px;
+        }
+    }
+}
+
+.about-vr {
+    position: relative;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-image: url('../images/dist/about-vr-bg-main.png');
+
+    &::before {
+        content: '';
+        position: absolute;
+        max-width: 440px;
+        max-height: 915px;
+        width: 100%;
+        height: 100%;
+        right: 0;
+        top: 0;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: contain;
+        background-image: url('../images/dist/about-vr-bg-1.png');
+    }
+
+    &__wrapper {
+        position: relative;
+        display: flex;
+        gap: 60px;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    &__left {
+        position: relative;
+    }
+
+    &__left-img-bg {
+        position: relative;
+        max-width: 557px;
+        width: 100vw;
+        max-height: 565px;
+        height: 100vh;
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: center;
+        background-image: url('../images/dist/sprite-stack.svg#about-vr-person-bg');
+    }
+
+    &__left-img {
+        position: absolute;
+        left: 50px;
+        top: 0;
+        max-width: 500px;
+        width: 100%;
+        max-height: 587px;
+        height: 100vh;
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: center;
+        background-image: url('../images/dist/sprite-stack.svg#about-vr-person');
+    }
+
+    &__right {
+        width: fit-content;
+        position: relative;
+
+        &::before {
+            content: '';
+            position: absolute;
+            max-width: 528px;
+            max-height: 293px;
+            height: 100%;
+            width: 100%;
+            bottom: 0;
+            right: 0;
+            transform: translateY(60%);
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: contain;
+            background-image: url('../images/dist/about-vr-bg-vr.png');
+        }
+    }
+
+    &__text{
+        position: relative;
+
+        &::before{
+            content: '';
+            position: absolute;
+            width: 33px;
+            height: 33px;
+            bottom: -40px;
+            left: 50%;
+            background-size: contain;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-image: url('../images/dist/sprite-stack.svg#arrow-left');
         }
     }
 }
