--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -355,3 +355,25 @@
         background-image: url('../images/dist/sprite-stack.svg#about-consoles-main-img-screw-big');
     }
 }
+
+.pricing{
+    padding: 50px 0 90px;
+
+    &__title{
+        max-width: 100%;
+        text-align: center;
+    }
+
+    &__list{
+        padding-top: 25px;
+        display: flex;
+        gap: 10px;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    &__list-item{
+        max-width: 360px;
+        width: 100%;
+    }
+}
