--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -343,19 +343,29 @@
         background-image: url('../images/dist/sprite-stack.svg#about-consoles-main-img');
     }
 
+    &__right-img-screw{
+        position: absolute;
+        max-width: 200px;
+        max-height: 200px;
+        width: 100%;
+        height: 100vh;
+        top: 0;
+        left: 35%;
+    }
+
     &__right-img-screw-small {
         max-width: 83px;
         max-height: 83px;
-        left: 40%;
-        top: 25%;
+        left: 0;
+        bottom: 0;
         background-image: url('../images/dist/sprite-stack.svg#about-consoles-main-img-screw-small');
     }
 
     &__right-img-screw-big {
         max-width: 136px;
         max-height: 136px;
-        right: 30%;
-        top: 10%;
+        right: 5%;
+        top: 15%;
         background-image: url('../images/dist/sprite-stack.svg#about-consoles-main-img-screw-big');
     }
 }
