--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -40,6 +40,12 @@
             max-height: 95px;
         }
     }
+
+    .pricing{
+        &__list{
+            align-items: stretch;
+        }
+    }
 }
 
 @media(max-width: 1100px){
@@ -143,6 +149,52 @@
             max-height: 60px;
         }
     }
+
+    .pricing{
+        &__list{
+            padding-top: 0;
+        }
+    }
+
+    .pricing>.container>.pricing__title{
+        max-width: 100%;
+    }
+
+    .pricing-plan{
+        padding: 25px;
+
+        &__title{
+            font-size: 20px;
+        }
+
+        &__title-price-wrapper{
+            margin: 0;
+        }
+
+        &__title-price{
+            font-size: 35px;
+            line-height: 35px;
+        }
+
+        &__list{
+            margin-bottom: 30px;
+        }
+
+        &__list-item+.pricing-plan__list-item{
+            margin-top: 10px;
+        }
+    }
+
+    .footer{
+        &__inner{
+            flex-direction: column;
+            gap: 25px;
+        }
+
+        &__socials{
+            order: -1;
+        }
+    }
 }
 
 @media(max-width: 700px){
@@ -200,6 +252,15 @@
         &__right-img{
             max-height: 80%;
             bottom: 0;
+        }
+    }
+
+    .pricing{
+        padding: 50px 0;
+
+        &__list{
+            flex-direction: column;
+            align-items: center;
         }
     }
 }
